EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==4/13/2009==
Congdar: Bots - Fix release vs. debug compile for focus effects, updated bots to new attack code.

==4/13/2009==
Trevius: SoF - Corrected corpse looting slots so that the correct item is looted when there are multiple on a corpse
Trevius: SoF - Item Links from corpse looting messages now display properly for both client versions
Derision: Personal Tribute should now have an effect serverside, rather than just showing increased stats in the client.
Derision: Deactivating Tribute should no longer crash the client.
Derision: SoF - Personal Tribute should now work.

==4/12/2009==
Trevius: SoF - Commands that return itemlinks will now show the full name instead of cutting off the first 5 characters
Trevius/Derision: SoF - Fix for subitem serialization.
Derision: SoF - Corrected money update opcodes.
Derision: SoF - Bazaar Trader mode.

==4/11/2009==
Trevius: SoF - Stopped the bogus "Deleting Item" messages from being sent to SoF Clients
cavedude: (Congdar): You can now safely delete a key item after its been added to your keyring.
cavedude: (realityincarnate): Added quest::MerchantSetItem and quest::MerchantCountItem to add temp items to a merchantlist. See Wiki for usage.
cavedude: Added rule World:MinGMAntiHackStatus to manage the min status checked against the GM AntiHack list.
Derision: Sof: Added support for regular /who

==4/10/2009==
Derision: Tradeskill recipes involving weapons as an ingredient should no longer dupe the weapon.
Derision: Expendable items with charges are now deleted when the last charge is used.
Derision: Tradeskill skillups now based on unmodified skill level.
Derision: (realityincarnate): Prevent bard skillups for instruments they aren't trained in.
Derision: (realityincarnate): Implemented SE_Hunger (e.g. for Song of Sustenance).
Derision: (realityincarnate): Undying armor by setting RGB to 255 255 255 fixed.