@@ -426,3 +426,4 @@ N(OP_FinishWindow2),
 N(OP_ItemVerifyRequest),
 N(OP_ItemVerifyReply),
 N(OP_GMTrainSkillConfirm),
+N(OP_RestState),
