@@ -474,6 +474,7 @@ OP_SlashAdventure=0x0000		#/adventure
 OP_BecomePVPPrompt=0x0000		#
 OP_MoveLogRequest=0x0000		#gone I think
 OP_MoveLogDisregard=0x0000		#gone I think
+OP_RestState=0x116E
 
 #named unknowns, to make looking for real unknown easier
 OP_AnnoyingZoneUnknown=0x0000		#Trevius 02/20/09
