@@ -1,0 +1,3 @@
+INSERT INTO rule_values VALUES(0,'Character:RestRegenPercent',0);
+INSERT INTO rule_values VALUES(0,'Character:RestRegenTimeToActivate',30);
+
